--- a/ajax_w.index.html
+++ b/ajax_w.index.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a id="ajax_get" class="nav-link" href="#">一覧表示</a>
+                        <a id="ajax_get" class="nav-link" href="index.php">再挑戦</a>
                     </li>
                 </ul>
             </div>
