3回目の修正投稿

--- a/ajax_w.index.html
+++ b/ajax_w.index.html
@@ -83,7 +83,7 @@
 
                 //done:成功
                 .done(function (data, textStatus, jqXHR) {
-                    cosole.log(data);
+                    console.log(data);
                     result = listData(data);
                     $('#echo').html(result);
                 })
